# alatix-agent-framework

./: LICENSE (MIT)  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
core/: __init__.py  agent.py  llm.py  memory.py  orchestrator.py  planner.py  tools.py
examples/: codingagent.py
tests/: test_agent.py  test_llm.py  test_memory.py  test_orchestrator.py  test_planner.py  test_tools.py
